--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -52,15 +52,49 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
 
-# - name: Deploy to ECS
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v1
+      with:
+        terraform_version: 1.0.0
+
+    - name: Terraform Init
+      run: terraform init
+      working-directory: ./terraform
+
+    - name: Terraform Apply
+      run: terraform apply -auto-approve
+      working-directory: ./terraform
+
+    - name: Install kubectl
+      run: |
+        curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+        chmod +x kubectl
+        sudo mv kubectl /usr/local/bin/
+
+    - name: Update kubeconfig
+      run: aws eks update-kubeconfig --name demo-cluster --region us-east-1
+
+    - name: Deploy to EKS
+      run: |
+        kubectl apply -f k8s/frontend-deployment.yaml
+        kubectl apply -f k8s/frontend-service.yaml
+        kubectl apply -f k8s/backend-deployment.yaml
+        kubectl apply -f k8s/backend-service.yaml
+        kubectl apply -f k8s/frontend-hpa.yaml
+        kubectl apply -f k8s/backend-hpa.yaml
+
+    # - name: Install Helm
 #   run: |
-# # Install kubectl
-# curl -o kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.18.9/2020-11-02/bin/linux/amd64/kubectl
-# chmod +x ./kubectl
-# sudo mv ./kubectl /usr/local/bin/
+#     curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
 
-# # Update kubeconfig
-# aws eks update-kubeconfig --region us-east-1 --name your-cluster-name
+# - name: Deploy Prometheus using Helm
+#   run: |
+#     helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
+#     helm repo update
+#     helm install prometheus prometheus-community/prometheus --namespace monitoring --create-namespace
 
-# # Deploy Kubernetes resources
-# kubectl apply -f k8s/
+# - name: Deploy Grafana using Helm
+#   run: |
+#     helm repo add grafana https://grafana.github.io/helm-charts
+#     helm repo update
+#     helm install grafana grafana/grafana --namespace monitoring --set adminPassword=admin --set persistence.enabled=false --set service.type=LoadBalancer
