--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -52,18 +52,18 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v2
-      with:
-        terraform_version: 1.1.7
+    # - name: Setup Terraform
+    #   uses: hashicorp/setup-terraform@v2
+    #   with:
+    #     terraform_version: 1.1.7
 
-    - name: Terraform Init
-      run: terraform init
-      working-directory: ./terraform
+    # - name: Terraform Init
+    #   run: terraform init
+    #   working-directory: ./terraform
 
-    - name: Terraform Apply
-      run: terraform apply -auto-approve
-      working-directory: ./terraform
+    # - name: Terraform Apply
+    #   run: terraform apply -auto-approve
+    #   working-directory: ./terraform
 
     - name: Install kubectl
       run: |
