--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -63,12 +63,12 @@ jobs:
 
     - name: Deploy to EKS
       run: |
-        kubectl apply -f k8s/frontend-deployment.yaml
-        kubectl apply -f k8s/frontend-service.yaml
-        kubectl apply -f k8s/backend-deployment.yaml
-        kubectl apply -f k8s/backend-service.yaml
-        kubectl apply -f k8s/frontend-hpa.yaml
-        kubectl apply -f k8s/backend-hpa.yaml
+        kubectl apply -f ./k8s/frontend-deployment.yaml
+        kubectl apply -f ./k8s/frontend-service.yaml
+        kubectl apply -f ./k8s/backend-deployment.yaml
+        kubectl apply -f ./k8s/backend-service.yaml
+        kubectl apply -f ./k8s/frontend-hpa.yaml
+        kubectl apply -f ./k8s/backend-hpa.yaml
 
     # - name: Install Helm
 #   run: |
