--- a/k8s/backend-service.yaml
+++ b/k8s/backend-service.yaml
@@ -6,7 +6,7 @@ spec:
   selector:
     app: backend
   ports:
-  - protocol: tcp
+  - protocol: TCP
     port: 80
     targetPort: 3001
   type: LoadBalancer
