--- a/k8s/frontend-service.yaml
+++ b/k8s/frontend-service.yaml
@@ -6,7 +6,7 @@ spec:
   selector:
     app: frontend
   ports:
-  - protocol: tcp
+  - protocol: TCP
     port: 80
     targetPort: 3000
   type: LoadBalancer
